--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div>
     
     <h2 class="controls-toggle">Controls <span class="open">&#9650;</span><span class="close">&#9660;</span></h2>
-    <div class="status">Welcome to the BHS Audio Visualization Videomatic!</div>
+    <div class="status">Welcome to the BHS Audio Visualization Videomatic!  Choose a song to start.</div>
     <p><span class="number step-1">1.</span> Choose a song or load your own.</p>
     <button class="load-song" data-song="/audio/hello.mp3">"Hello"</button>
     <button class="load-song" data-song="/audio/o-canada.mp3">"Oh Canada"</button>
